Fix eraser to only remove all classes or style changes to make compatible with dark mode

--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ body {
     flex-direction: column;
     align-items: center;
     gap: 1em;
+    background-color: black;
 }
 
 .grid {
@@ -31,10 +32,6 @@ body {
 
 .box {
     padding: 5px;
-}
-
-.eraser {
-    background-color: white;
 }
 
 .black {
